@@ -1,3 +1,8 @@
+2021-11-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/calendars.cpp (getBusinessDayList): Condition businessDayList
+	use on QuantLib 1.18 or newer
+
 2021-11-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor release
